creates top level pom properties for compilers & caffeine versions

--- a/public/enterprise/cypher/cypher-compiled-runtime-3.2/pom.xml
+++ b/public/enterprise/cypher/cypher-compiled-runtime-3.2/pom.xml
@@ -181,7 +181,7 @@
     <dependency>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
-      <version>2.3.3</version>
+      <version>${caffeine.version}</version>
     </dependency>
 
 
