--- a/public/community/cypher/cypher-compiler-3.2/pom.xml
+++ b/public/community/cypher/cypher-compiler-3.2/pom.xml
@@ -163,7 +163,7 @@
     <dependency>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
-      <version>2.3.3</version>
+      <version>${caffeine.version}</version>
     </dependency>
 
 
