--- a/private/enterprise/kernel-commercial/pom.xml
+++ b/private/enterprise/kernel-commercial/pom.xml
@@ -74,6 +74,19 @@
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-causal-clustering</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.neo4j</groupId>
+            <artifactId>neo4j-fulltext-index</artifactId>
+            <version>3.5.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
         <dependency>
             <groupId>commons-codec</groupId>
@@ -108,4 +121,3 @@
     </dependencies>
 
 </project>
-
