--- a/public/enterprise/cypher/spec-suite-tools/pom.xml
+++ b/public/enterprise/cypher/spec-suite-tools/pom.xml
@@ -65,6 +65,12 @@
       <groupId>org.opencypher</groupId>
       <artifactId>tck-api</artifactId>
       <version>${opencypher.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- scala -->
@@ -144,6 +150,5 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
-
   </dependencies>
 </project>
