Do not trim stack trace during test execution output
Surefire trimStackTrace is a flag that controls
whether to trim the stack trace in the reports to just the lines
within the test or show the full trace. The default value of this flag is: true.
Default value does not suit us because stack traces that tests throw on CI
are basically lost with that option enabled.

--- a/public/pom.xml
+++ b/public/pom.xml
@@ -375,6 +375,7 @@
           <version>2.22.0</version>
           <configuration>
             <forkCount>${forkCounts}</forkCount>
+            <trimStackTrace>false</trimStackTrace>
             <reuseForks>true</reuseForks>
             <argLine>${test.runner.jvm.settings}</argLine>
             <runOrder>random</runOrder>
@@ -396,6 +397,7 @@
           <configuration>
             <argLine>${test.runner.jvm.settings}</argLine>
             <forkCount>${forkCounts}</forkCount>
+            <trimStackTrace>false</trimStackTrace>
             <reuseForks>true</reuseForks>
             <runOrder>random</runOrder>
             <includes>
